Designer, ModelEditor: Scope logging categories to respective namespaces

Move the logging category declarations of Designer and ModelEditor plugins into their respective internal namespaces. This change aligns with the approach used in other plugins and addresses potential symbol clashes when building with QTC_STATIC_BUILD under flto.

- Scope Q_LOGGING_CATEGORY declaration for Designer to the
  Designer::Internal namespace
- Scope Q_LOGGING_CATEGORY declaration for ModelEditor to the
  ModelEditor::Internal namespace

Fixes: QTCREATORBUG-31458
Change-Id: I27ee3fdf6a649d0daccfcd9780caf57e6c403023
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>